Returns Loomie id and switched to parameter query
